Visibility, documentation, formatting, string handling and debug general clean up.